feat: Poc version 1.0.2
- inserido jest
- ajuste na validacao das placas - padrao antigo  e padrao novo (mercosul)
- criado server fake v2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@modules/*": ["modules/*"],
       "@styles/*": ["styles/*"],
       "@core/*": ["core/*"]
-    }
+    },
+    "types": ["jest", "node"]
   },
   "files": [],
   "references": [
